Fix some issues

--- a/popup.html
+++ b/popup.html
@@ -43,7 +43,7 @@
             <div class="modal-body">
                 <div class="">
                     <label for="url" class="form-label">آدرس اینترنتی محصول در راست چین</label>
-                    <input type="url" class="form-control" id="url" value="https://www.rtl-theme.com/vansa-script/">
+                    <input type="url" class="form-control" id="url" placeholder="https://www.rtl-theme.com/vansa-script/">
                 </div>
             </div>
             <div class="modal-footer">
