Fix some issues

--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,7 @@
     <button type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#create">ایجاد جدید
     </button>
     <select class="form-select w-auto pt-2 small" aria-label="زمان بررسی فروش">
+        <option value="1">1 دقیقه</option>
         <option value="5" selected>5 دقیقه</option>
         <option value="10">10 دقیقه</option>
         <option value="30">30 دقیقه</option>
